--- a/src/components/rwd-production/rwd-production.scss
+++ b/src/components/rwd-production/rwd-production.scss
@@ -9,6 +9,7 @@
 			position: absolute;
 			top: -15vh;
 			width: 100%;
+			left: 0;
 			height: 1rem;
 		}
 
